added COMPONENT option to install, enabled CPACK_DEB_COMPONENT_INSTALL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if (NOT MSVC)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
 endif()
 
+set(CPACK_DEB_COMPONENT_INSTALL ON)
+
 # library info
 
 set(PROJECT_DESCRIPTION "Logging library for C applications")
@@ -253,7 +255,7 @@ option(INSTALL_HEADER "Install the header files" ON) # Install yder.h or not
 configure_file(libyder.pc.in libyder.pc @ONLY)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libyder.pc
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+	DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig COMPONENT yder)
 
 set(TARGETS yder)
 if (BUILD_STATIC)
@@ -262,19 +264,19 @@ endif ()
 
 if (INSTALL_HEADER)
     install(TARGETS ${TARGETS}
-            RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-            ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-            PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+	    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT yder
+	    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT yder
+	    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT yder
+	    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT yder)
     install(DIRECTORY examples/
-            DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples/ COMPONENT runtime)
+            DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples/ COMPONENT yder)
     install(FILES README.md
-            DESTINATION ${CMAKE_INSTALL_DOCDIR} COMPONENT runtime)
+            DESTINATION ${CMAKE_INSTALL_DOCDIR} COMPONENT yder)
 else ()
     install(TARGETS ${TARGETS}
-            RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-            ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+	    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT yder
+	    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT yder
+	    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT yder)
 endif ()
 
 # uninstall target
