removed documetation and examples from yder component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,9 +269,9 @@ if (INSTALL_HEADER)
 	    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT yder
 	    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT yder)
     install(DIRECTORY examples/
-            DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples/ COMPONENT yder)
+            DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples COMPONENT runtime)
     install(FILES README.md
-            DESTINATION ${CMAKE_INSTALL_DOCDIR} COMPONENT yder)
+            DESTINATION ${CMAKE_INSTALL_DOCDIR} COMPONENT runtime)
 else ()
     install(TARGETS ${TARGETS}
 	    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT yder
